--- a/src/index.html
+++ b/src/index.html
@@ -9,18 +9,35 @@
 </head>
 <body>
   
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+<div class="all">
+  <div class="left">
+    <img class="Sedans" src="../images/icon-sedans.svg" alt="SedansCarIcon"> 
+    <h1>Sedans</h1>
+    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+    or on your next road trip.
+    </p>
+    <button class="btn-left">Learn More</button>
+  </div>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+  <div class="mid">
+    <img class="SUV" src="../images/icon-suvs.svg" alt="SUVCarIcon"> 
+    <h1>SUVs</h1>
+    <p> Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+    and off-road adventures.
+    </p>
+    <button class="btn-mid">Learn More</button>
+  </div>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
+  <div class="right">
+    <img class="Luxury" src="../images/icon-luxury.svg" alt="LuxuryCarIcon"> 
+    <h1>Luxury</h1>
+    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+    rental and arrive in style.
+    </p>
+    <button class="btn-right">Learn More</button>
+  </div>
+</div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
